--- a/aboutme.html
+++ b/aboutme.html
@@ -125,7 +125,7 @@
 
                 <div class ="about-paragraph2">
             
-                Outside of design, I love staying active through strength training and exploring new places. I enjoy seeing things from a fresh perspective and sharing experiences with people who have the same excitement for life.  <!-- I’m currently building on my skills in information architecture through personal projects and eager to learn from experienced information architects.  -->
+                Outside of design, I love staying active through strength training and exploring new places. I enjoy seeing things from a fresh perspective and sharing experiences with people who have the same curiosity for life.  <!-- I’m currently building on my skills in information architecture through personal projects and eager to learn from experienced information architects.  -->
                 </div>
               <div class ="about-paragraph2">
                 I’m always looking for opportunities to collaborate with other designers and gain feedback on my work. If you’d like to get in touch, I’d love to hear from you!
