--- a/aboutme.html
+++ b/aboutme.html
@@ -278,7 +278,7 @@
                       <div class="books-list">
                         <ol>
                           <li> Strength-training </li>
-                          <li> Running </li>
+                          <li> Reading </li>
                           <li> Exploring new cultures </li>
                         </ol>
                       </div>
