updated bala and pomolo

--- a/balabangles.html
+++ b/balabangles.html
@@ -146,12 +146,7 @@
 								<h2 class="subtitle1">SOLO CONTENT STRATEGY PROJECT</h2>
 
 								<h2 class="subtitle2">
-									As a new student in UCLA's UX Design program, I enrolled in a
-									Content Strategy course to gain a deeper understanding of how
-									to develop effective content strategies for digital platforms.
-									I was given the task to create a comprehensive content
-									redesign strategy to improve Bala Bangles' online
-									user engagement and content taxonomy.
+									For my content strategy course in UCLA's UX Design program, I was given the task of selecting a company and developing a comprehensive redesign strategy to improve its online site. I chose Bala Bangles for my love of health and wellness, and curiosity for the meditation and at-home fitness space. It was a rewarding exercise in which I gained a deeper understanding for applying efficient management strategies in digital platforms, and ensuring content is being effectively delivered to meet user needs and business goals.
 								</h2>
 
 								<div
