updated bala and pomolo

--- a/pomolo.html
+++ b/pomolo.html
@@ -115,7 +115,7 @@
               </h2>
 
               <h2 class="subtitle2">
-                For my first solo design project, I created a mobile tracking app called Pomolo which aims to help students with their focus and concentration. This project aims to understand and address the issues with current onboarding experiences and ways in which it can be improved to meet students' goals. This exercise was an eye-opening journey in which I gained insight in not only thoroughly researching and designing, but also iteratively testing and refining results to ensure that it meets users' needs. 
+                For my first solo design project, I designed a mobile tracking app called Pomolo which aims to help students with their focus and concentration. This project aims to understand and address the issues with current onboarding experiences and ways in which it can be improved to meet students' goals. This exercise was an eye-opening journey in which I gained insight in not only thoroughly researching and designing, but also iteratively testing and refining results to ensure that they meets users' needs. 
 
 
               </h2>
