--- a/aboutme.html
+++ b/aboutme.html
@@ -279,7 +279,7 @@
                         <ol>
                           <li> Strength-training </li>
                           <li> Reading </li>
-                          <li> Exploring new cultures </li>
+                          <li> Exploring new places and cultures</li>
                         </ol>
                       </div>
                       <div class="image_overlay2">
