--- a/thewashingtonpost.html
+++ b/thewashingtonpost.html
@@ -141,20 +141,12 @@
 					<div class="row justify-content-center">
 						<div class="col-lg-10 col-lg-7 entries">
 							<article class="entry entry-single">
-								<h2 class="title1" style="color: #f2cc5c">Bala Bangles</h2>
+								<h2 class="title1" style="color: #346BF3">The Washington Post</h2>
 
 								<h2 class="subtitle1">SOLO CONTENT STRATEGY PROJECT</h2>
 
 								<h2 class="subtitle2">
-									For my content strategy course in UCLA's UX Design program, I
-									was given the task of selecting a company and developing a
-									comprehensive redesign strategy to improve its online site. I
-									chose Bala Bangles for my love of health and wellness, and
-									curiosity for the meditation and at-home fitness space. It was
-									a rewarding exercise in which I gained a deeper understanding
-									for applying efficient management strategies in digital
-									platforms, and ensuring content is being effectively delivered
-									to meet user needs and business goals.
+									For my capstone project in UCLA's UX Design program, [ description ]
 								</h2>
 
 								<div
@@ -176,13 +168,13 @@
 										<h2>DURATION</h2>
 										<div
 											style="
-												border: 1.5px solid #f2cc5c;
+												border: 1.5px solid #346BF3;
 												width: 10%;
 												margin-bottom: 4%;
 												margin-top: 4%;
 											"
 										></div>
-										<p>Oct - Dec 2022</p>
+										<p> Feb - Mar 2023 </p>
 									</div>
 
 									<!-- role -->
@@ -190,7 +182,7 @@
 										<h2>ROLE</h2>
 										<div
 											style="
-												border: 1.5px solid #f2cc5c;
+												border: 1.5px solid #346BF3;
 												width: 10%;
 												margin-bottom: 4%;
 												margin-top: 4%;
@@ -209,7 +201,7 @@
 										<h2>TYPE</h2>
 										<div
 											style="
-												border: 1.5px solid #f2cc5c;
+												border: 1.5px solid #346BF3;
 												width: 10%;
 												margin-bottom: 4%;
 												margin-top: 4%;
@@ -223,7 +215,7 @@
 										<h2>LINKS</h2>
 										<div
 											style="
-												border: 1.5px solid #f2cc5c;
+												border: 1.5px solid #346BF3;
 												width: 10%;
 												margin-bottom: 4%;
 												margin-top: 4%;
