--- a/balabangles.html
+++ b/balabangles.html
@@ -173,7 +173,7 @@
 								<div class="row" style="width: 100%; margin: 0px 0px 0px 0vw">
 									<!-- duration -->
 									<div class="case-details" style="width: 25%">
-										<h2>DURATION</h2>
+										<h2>TIMELINE</h2>
 										<div
 											style="
 												border: 1.5px solid #f2cc5c;
@@ -182,7 +182,7 @@
 												margin-top: 4%;
 											"
 										></div>
-										<p>Oct - Dec 2022</p>
+										<p>6 Weeks</p>
 									</div>
 
 									<!-- role -->
@@ -206,7 +206,7 @@
 
 									<!-- type -->
 									<div class="case-details" style="width: 25%">
-										<h2>TYPE</h2>
+										<h2>DELIVERABLE</h2>
 										<div
 											style="
 												border: 1.5px solid #f2cc5c;
@@ -215,7 +215,7 @@
 												margin-top: 4%;
 											"
 										></div>
-										<p>Content Redesign Strategy</p>
+										<p>Web and Content Design Prototypes </p>
 									</div>
 
 									<!-- deck -->
