--- a/thewashingtonpost.html
+++ b/thewashingtonpost.html
@@ -143,7 +143,7 @@
 							<article class="entry entry-single">
 								<h2 class="title1" style="color: #346BF3">The Washington Post</h2>
 
-								<h2 class="subtitle1">SOLO CONTENT STRATEGY PROJECT</h2>
+								<h2 class="subtitle1"> CAPSTONE CONTENT STRATEGY PROJECT</h2>
 
 								<h2 class="subtitle2">
 									For my capstone project in UCLA's UX Design program, [ description ]
@@ -224,7 +224,7 @@
 										<p>
 											<a
 												class="about-link2"
-												href="https://www.figma.com/file/fMRvn3D6iBROx4wTzH25RA/UCLA-UX3---Content_Design?node-id=141%3A3&t=O9goXf0MvpLmS0CH-1"
+												href="https://www.figma.com/file/ACZ0s3scQi8bZ1QPJ2NfIR/Portfolio---The-Washington-Post?node-id=4%3A6&t=WlnMnhdbNBVclya8-1"
 												target="_blank"
 											>
 												Figma Work
@@ -234,10 +234,10 @@
 
 											<a
 												class="about-link2"
-												href="https://drive.google.com/file/d/1mSbYln3x5S05tsJCRQDv4nKoBvjq8-4A/view?usp=sharing"
+												href="https://docs.google.com/document/d/1-oHYqUmShPZ-BMV2F6brveuWoClSS0P6loL4vbhPpiw/edit?usp=sharing"
 												target="_blank"
 											>
-												Process Deck
+												Process Book
 											</a>
 										</p>
 									</div>
