--- a/pomolo.html
+++ b/pomolo.html
@@ -136,7 +136,7 @@
                   <h2> DURATION </h2>
                   <div style="border: 1.5px solid #177add; width:10%; margin-bottom:4%; margin-top:4%;"> </div>
                   <p>
-                    Apr - Jun 2022
+                    10 weeks
                   </p>
                 </div>
 
@@ -156,10 +156,10 @@
 
                 <!-- type -->
                 <div class="case-details" style="width:25%">                  
-                  <h2> TYPE </h2>
+                  <h2> DELIVERABLE </h2>
                   <div style="border: 1.5px solid #177add; width:10%; margin-bottom:4%; margin-top:4%;"> </div>
                   <p>
-                    Mobile Design
+                    Focus-Tracking Mobile App
                   </p>
                 </div>
 
