--- a/thewashingtonpost.html
+++ b/thewashingtonpost.html
@@ -174,7 +174,7 @@
 												margin-top: 4%;
 											"
 										></div>
-										<p> Feb - Mar 2023 </p>
+										<p> 3 weeks </p>
 									</div>
 
 									<!-- role -->
