--- a/aboutme.html
+++ b/aboutme.html
@@ -356,10 +356,11 @@
                           <div class="image_title2">BOOKS</div>
                       </div> -->
                       <div class="books-list"> 
-                        <ol style="width:90%;">                               
-                          <li> Sam Berns, "My Philosophy <br> for a Happy Life" </li>  
+                        <ol style="width:100%;">                               
+                          <li> Sam Berns, "My Philosophy for a Happy Life" </li> 
+                          <li> Eduardo Briceno, "The Power of Belief" </li> 
+
                           <li> Bernard Lee Albertson, "An Old Man's Advice" </li>
-                          <li> David Goggins, "2018 VFW Americanism Award" </li>
                         </ol> 
                       </div>
                       <div class="image_overlay2">
