--- a/balabangles.html
+++ b/balabangles.html
@@ -143,7 +143,7 @@
 							<article class="entry entry-single">
 								<h2 class="title1" style="color: #f2cc5c">Bala Bangles</h2>
 
-								<h2 class="subtitle1">SOLO CONTENT STRATEGY PROJECT</h2>
+								<h2 class="subtitle1"> CONTENT STRATEGY & INFORMATION ARCHITECTURE DESIGN </h2>
 
 								<h2 class="subtitle2">
 									For my content strategy course in UCLA's UX Design program, I
@@ -215,7 +215,7 @@
 												margin-top: 4%;
 											"
 										></div>
-										<p>Web and Content Design Prototypes </p>
+										<p>Content Strategy Web Prototypes</p>
 									</div>
 
 									<!-- deck -->
