--- a/pomolo.html
+++ b/pomolo.html
@@ -111,7 +111,7 @@
               </h2>
 
               <h2 class="subtitle1">
-                SOLO MOBILE DESIGN PROJECT
+                CONCEPT DEVELOPMENT & MOBILE APP DESIGN 
               </h2>
 
               <h2 class="subtitle2">
