--- a/thewashingtonpost.html
+++ b/thewashingtonpost.html
@@ -607,7 +607,7 @@
 										<div class="row">
 											<!-- START SECTION: SITE MAP PARAGRAPH -->
 											<div class="col-lg-12">
-												<h3>CREATING PERSONAS</h3>
+												<h3>COMPETITIVE ANALYSIS</h3>
 												<div
 													style="
 														border: 1.5px solid #346BF3;
@@ -641,7 +641,7 @@
 											>
 												<img
 													style="border: white 1px solid"
-													src="assets/img/proj_post/persona.png"
+													src="assets/img/proj_post/competitive.png"
 													alt=""
 												/>
 											</div>
