--- a/thewashingtonpost.html
+++ b/thewashingtonpost.html
@@ -744,7 +744,7 @@
 										<div class="row">
 											<!-- START SECTION: SITE MAP PARAGRAPH -->
 											<div class="col-lg-12">
-												<h3>INFORMATION ARCHITECTURE</h3>
+												<h3> IDEATION </h3>
 												<div
 													style="
 														border: 1.5px solid #346BF3;
@@ -753,7 +753,7 @@
 														margin-top: 4%;
 													"
 												></div>
-												<p>Conversation flow for virtual assistant feature</p>
+												<p>Redesigning the top-level navigation hiearchy and ideating layout styles for the home and "For You" page</p>
 											</div>
 											<!-- END OF SITE MAP PARAGRAPH-->
 										</div>
@@ -769,21 +769,37 @@
 											margin-bottom: -50px;
 											margin-right: auto;
 											margin-left: auto;
-											width: 100%;
-										"
-									>
-										<div class="col-lg-12">
+											width: 100%;">
+											<!-- side by side imgs start here -->
+											<div class="row">
+												<!-- image 1 -->
+												<div class="col-lg-6" style="display:flex">
 											<div
 												class="portfolio-details-slider"
 												style="border: white 1px solid"
 											>
 												<img
 													style="border: white 1px solid"
-													src="assets/img/proj_bala/sitemap.png"
+													src="assets/img/proj_post/ideation1.jpg"
 													alt=""
 												/>
 											</div>
 										</div>
+										<!-- image 2 -->
+										<div class="col-lg-6" style="display:flex">
+											<div
+												class="portfolio-details-slider"
+												style="border: white 1px solid"
+											>
+												<img
+													style="border: white 1px solid"
+													src="assets/img/proj_post/ideation2.jpg"
+													alt=""
+												/>
+											</div>
+										</div>
+											</div>
+										<!-- side by side imgs end here -->	
 									</section>
 									<!-- END: INFO ARCHITECTURE -->
 
