--- a/aboutme.html
+++ b/aboutme.html
@@ -179,7 +179,10 @@
                     <div style="margin-top:20px;"> 
                       <p style="font-weight:600; margin: auto;"> Licenses & Certifications </p>
                       <p>
-                        UCLA UX Certificate Program <br>
+                        UCLA UX Design Certification <br>
+                        Build Wireframes and Low-Fidelity Prototypes <br>
+                        UX Design Process: Empathize, Define, Ideate <br>
+                        Foundations of User Experience Design <br>
                         Teaching Computational Thinking for Everyone <br>
                         Teaching Computation in the Digital World <br>
                       </p>
@@ -194,13 +197,14 @@
                       <p>
                         Concept Development <br>
                         User Research <br>
+                        User Interviews <br>
                         Usability Testing <br>
-                        Wireframing & Prototyping <br>
-                        Mobile & Web Design <br>
-                        Interaction Design <br>
-                        Visual Design <br>
-                        Information Architecture <br>
+                        Literature Review <br>
                         Content Design <br>
+                        Information Architecture <br>
+                        Rapid Prototyping <br>
+                        Visual Design <br>
+                        Interaction Design <br>
                       </p>
                     </div>
                   </div>
@@ -216,8 +220,8 @@
                         C / C++ <br>
                         Haskell <br> 
                         Unix / Linux <br>
-                        Git <br>
                         CSS & HTML <br>
+                        Javascript <br>
                         Boostrap.js
                       </p>
                     </div>
@@ -230,7 +234,9 @@
                     <div style="border: 1.5px solid #5abad5; width:10%; margin-bottom:6%; margin-top:3%;"> </div>
                     <div> 
                       <p>
+                        Git <br>
                         Figma <br>
+                        Miro <br>
                         Sketch <br>
                         Invision <br>
                         Adobe XD <br>
