--- a/thewashingtonpost.html
+++ b/thewashingtonpost.html
@@ -573,7 +573,7 @@
 											<!-- START SECTION: SITE MAP PARAGRAPH -->
 											<div class="col-lg-12">
 												<!-- START: PRODUCT PAGE STRATEGY -->
-												<h3>PRODUCT PAGE STRATEGY</h3>
+												<h3> RESULTS </h3>
 												<div style=" border: 1.5px solid #346BF3; width: 5%; margin-bottom: 0%; margin-top: 4%; " ></div>
 											</div>
 										</div>
