--- a/thewashingtonpost.html
+++ b/thewashingtonpost.html
@@ -588,14 +588,14 @@
 
 											<div style="padding-bottom: 30px">
 												<span style=" font-family: 'Mukta'; font-weight: 300; font-size: 15px; color: #999; letter-spacing: 0.3px; " >
-													<em> Product Listing </em>
+													<em> Home Page </em>
 													<!--Padding is optional-->
 												</span>
 											</div>
 
 											<div class="col-lg-12">
 												<div class="portfolio-details-slider" style="border: white 1px solid" >
-													<img src="assets/img/proj_bala/product_1o.png" alt="" />
+													<img src="assets/img/proj_post/hifi-orig-home.png" alt="" />
 												</div>
 											</div>
 										</div>
@@ -609,14 +609,35 @@
 
 											<div style="padding-bottom: 30px">
 												<span style=" font-family: 'Mukta'; font-weight: 300; font-size: 15px; color: #999; letter-spacing: 0.3px; " >
-													<em> Product Listing</em>
+													<em> Home Page (Style 1) </em>
 													<!--Padding is optional-->
 												</span>
 											</div>
 
 											<div class="col-lg-12">
 												<div class="portfolio-details-slider" style="border: white 1px solid" >
-													<img src="assets/img/proj_bala/product_1p.png" alt="" />
+													<img src="assets/img/proj_post/hifi-home1.png" alt="" />
+												</div>
+											</div>
+										</div>
+										<!-- END: PROPOSAL -->
+
+										<!-- START: PROPOSAL -->
+										<div style=" margin-top: 50px; padding: 30px; border: #999 0.5px solid; " >
+											<div>
+												<span style=" font-family: 'Amiko'; font-weight: 700; font-size: 17px; color: #0e1126; letter-spacing: 0.5px; " > PROPOSAL <!--Padding is optional--> </span>
+											</div>
+
+											<div style="padding-bottom: 30px">
+												<span style=" font-family: 'Mukta'; font-weight: 300; font-size: 15px; color: #999; letter-spacing: 0.3px; " >
+													<em> Home Page (Style 2) </em>
+													<!--Padding is optional-->
+												</span>
+											</div>
+
+											<div class="col-lg-12">
+												<div class="portfolio-details-slider" style="border: white 1px solid" >
+													<img src="assets/img/proj_post/hifi-home2.png" alt="" />
 												</div>
 											</div>
 										</div>
