removed extra files

--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@
 
           <!-- Content Design  -->
           <div class="col-lg-4 portfolio-item" class="img-fluid">
-            <a href="thewashingtonpost.html" target="_blank">
+            <a href="proj_thewashingtonpost.html" target="_blank">
               <div class="image" >
                 <img src="assets/img/proj_post/cover.png" style="border-radius:10px;" class="img-fluid" alt="">
                 <div class="image_overlay">
@@ -176,7 +176,7 @@
 
           <!-- Content Design  -->
           <div class="col-lg-4 portfolio-item" class="img-fluid">
-            <a href="balabangles.html" target="_blank">
+            <a href="proj_balabangles.html" target="_blank">
               <div class="image" >
                 <img src="assets/img/proj_bala/cover.png" style="border-radius:10px;" class="img-fluid" alt="">
                 <div class="image_overlay">
@@ -204,7 +204,7 @@
 
           <!-- Proj 2 -->
           <div class="col-lg-4 portfolio-item" class="img-fluid">
-            <a href="pomolo.html">
+            <a href="proj_pomolo.html">
               <div class="image" >
                 <img src="assets/img/portfolio/pomolo.png" style="border-radius:10px;" class="img-fluid" alt="">
                 <div class="image_overlay">
