updated chipotle colors

--- a/proj_balabangles.html
+++ b/proj_balabangles.html
@@ -143,7 +143,9 @@
 							<article class="entry entry-single">
 								<h2 class="title1" style="color: #f2cc5c">Bala Bangles</h2>
 
-								<h2 class="subtitle1"> CONTENT STRATEGY & INFORMATION ARCHITECTURE DESIGN </h2>
+								<h2 class="subtitle1">
+									CONTENT STRATEGY & INFORMATION ARCHITECTURE
+								</h2>
 
 								<h2 class="subtitle2">
 									For my content strategy course in UCLA's UX Design program, I
