--- a/proj_chipotle.html
+++ b/proj_chipotle.html
@@ -141,9 +141,9 @@
 					<div class="row justify-content-center">
 						<div class="col-lg-10 col-lg-7 entries">
 							<article class="entry entry-single">
-								<h2 class="title1" style="color: #346BF3">Chipotle</h2>
+								<h2 class="title1" style="color: #C5170C">Chipotle</h2>
 
-								<h2 class="subtitle1"> CONTENT STRATEGY </h2>
+								<h2 class="subtitle1"> MOBILE APP & E-COMMERCE DESIGN </h2>
 
 								<h2 class="subtitle2">
 									As the media landscape continues to evolve, it's critical for traditional news organizations like The Washington Post to stay relevant with younger audiences. This content strategy project aims to address this challenge by rethinking how the Post creates and delivers content to Gen Z and young millennials.
@@ -168,14 +168,14 @@
 									<!-- duration -->
 									<div class="case-details" style="width: 25%">
 										<h2>DURATION</h2>
-										<div style="border: 1.5px solid #346BF3; width: 10%; margin-bottom: 4%; margin-top: 4%;" ></div>
+										<div style="border: 1.5px solid #C5170C; width: 10%; margin-bottom: 4%; margin-top: 4%;" ></div>
 										<p> 3 weeks </p>
 									</div>
 
 									<!-- role -->
 									<div class="case-details" style="width: 25%">
 										<h2>ROLE</h2>
-										<div style=" border: 1.5px solid #346BF3; width: 10%; margin-bottom: 4%; margin-top: 4%; " ></div>
+										<div style=" border: 1.5px solid #C5170C; width: 10%; margin-bottom: 4%; margin-top: 4%; " ></div>
 										<p>
 											Research <br />
 											Content Strategy <br />
@@ -187,14 +187,14 @@
 									<!-- type -->
 									<div class="case-details" style="width: 25%">
 										<h2>DELIVERABLE</h2>
-										<div style=" border: 1.5px solid #346BF3; width: 10%; margin-bottom: 4%; margin-top: 4%; " ></div>
+										<div style=" border: 1.5px solid #C5170C; width: 10%; margin-bottom: 4%; margin-top: 4%; " ></div>
 										<p>Web Content Redesign</p>
 									</div>
 
 									<!-- deck -->
 									<div class="case-details" style="width: 25%">
 										<h2>LINKS</h2>
-										<div style=" border: 1.5px solid #346BF3; width: 10%; margin-bottom: 4%; margin-top: 4%; " ></div>
+										<div style=" border: 1.5px solid #C5170C; width: 10%; margin-bottom: 4%; margin-top: 4%; " ></div>
 										<p>
 											<a class="about-link2" href="https://www.figma.com/file/ACZ0s3scQi8bZ1QPJ2NfIR/Portfolio---The-Washington-Post?node-id=4%3A6&t=WlnMnhdbNBVclya8-1" target="_blank" > Figma Work </a>
 											<br />
@@ -218,7 +218,7 @@
 									<div class="col-lg-12 mx-auto" style=" border: 1px solid white; margin-bottom: 0%; margin-right: 60px; " >
 
 										<h3>PROJECT TIMELINE</h3>
-										<div style=" border: 1.5px solid #346BF3; width: 5%; margin-bottom: 4%; margin-top: 4%; " ></div>
+										<div style=" border: 1.5px solid #C5170C; width: 5%; margin-bottom: 4%; margin-top: 4%; " ></div>
 										<p style="margin-bottom: 30px; display: inline-block"> During the design process, I adopted a goal-oriented approach by breaking down my tasks into a 3-week timeline, allowing me to establish important milestones and tasks at the end of each week. To gain insights into users' motivations, experiences, and pain points, I employed qualitative research methods such as user interviews and usability testing sessions. These methods proved highly effective. Additionally, I utilized quantitative research methods through user surveying to identify overarching trends, patterns, and potential areas for enhancement. </p>
 
 										<!-- timeline IMG -->
@@ -240,23 +240,23 @@
 									<!-- START: KICKOFF -->
 									<div class="col-lg-12" style="margin-bottom: 0%">
 										<h3 style="margin-bottom: 30px">KICKOFF</h3>
-										<div style=" border: 1.5px solid #346BF3; width: 5%; margin-bottom: 4%; margin-top: 4%; " ></div>
+										<div style=" border: 1.5px solid #C5170C; width: 5%; margin-bottom: 4%; margin-top: 4%; " ></div>
 
 										<p style="margin-bottom: 30px; display: inline-block"> The Washington Post, a leading newspaper in the US, is facing a challenge in terms of online engagement among younger generations such as Gen Z and younger millennials. The website's design and content strategy are perceived as outdated and not engaging enough to attract younger readers. As a result, the newspaper is losing potential readers and subscribers. This project aims to address and resolve this issue by conducting user research, analyzing the website's information architecture, content strategy, and design, and implementing improvements that cater to the needs and preferences of younger audiences while maintaining the newspaper's core values and standards. The ultimate goal is to increase engagement, retain current readers, and attract new ones. To kick things off, I initiated the process by posing three pivotal questions: </p>
 
 										<ol style="margin-bottom: 30px; display: inline-block">
 											<li style=" margin-left: 15px; font-weight: 300; margin-bottom: 10px; margin-top: 10px; " >
-												<p style=" color: #346BF3; font-weight: 500; font-size: 18px; letter-spacing: 0.3px; " > Who is our user? </p>
+												<p style=" color: #C5170C; font-weight: 500; font-size: 18px; letter-spacing: 0.3px; " > Who is our user? </p>
 												<p> What are their backgrounds, behaviors, intents, and motivations? </p>
 											</li>
 
 											<li style=" margin-left: 15px; font-weight: 300; margin-bottom: 10px; margin-top: 10px; " >
-												<p style=" color: #346BF3; font-weight: 500; font-size: 18px; letter-spacing: 0.3px; " > What are our users' pain points and goals? </p>
+												<p style=" color: #C5170C; font-weight: 500; font-size: 18px; letter-spacing: 0.3px; " > What are our users' pain points and goals? </p>
 												<p>What are their needs, values, and frustrations?</p>
 											</li>
 
 											<li style=" margin-left: 15px; font-weight: 350; margin-bottom: 10px; margin-top: 10px; " >
-												<p style=" color: #346BF3; font-weight: 500; font-size: 18px; letter-spacing: 0.3px; " > What are our objectives? </p>
+												<p style=" color: #C5170C; font-weight: 500; font-size: 18px; letter-spacing: 0.3px; " > What are our objectives? </p>
 												<p> What challenges will we focus on and address to improve our customers' online experience? </p>
 											</li>
 										</ol>
@@ -273,7 +273,7 @@
 											<!-- START: empathy mapping -->
 											<div class="col-lg-5" style=" border: 1px solid white; margin-bottom: 0%; margin-right: 60px; " > 
 												<h3>EMPATHY MAPPING</h3>
-												<div style=" border: 1.5px solid #346BF3; width: 15%; margin-bottom: 10%; margin-top: 10%; " ></div>
+												<div style=" border: 1.5px solid #C5170C; width: 15%; margin-bottom: 10%; margin-top: 10%; " ></div>
 												<p> To gain a deeper understanding of The Washington Post's Gen Z and young millennial users, I immersed myself in their world, exploring their thoughts, emotions, behaviors, and needs through extensive research and interviews. By delving into their experiences, I aimed to gather valuable insights that would shape my assumptions mapping process, enabling me to identify and prioritize assumptions, hypotheses, and potential risks. </p>
 											</div>
 
@@ -292,7 +292,7 @@
 									<!-- START: assumptions mapping -->
 									<div class="col-lg-12" style=" border: 1px solid white; margin-bottom: 0%; margin-right: 60px; " >
 										<h3>ASSUMPTIONS MAPPING</h3>
-										<div style="border: 1.5px solid #346BF3; width: 5%; margin-bottom: 4%; margin-top: 4%;"> </div>
+										<div style="border: 1.5px solid #C5170C; width: 5%; margin-bottom: 4%; margin-top: 4%;"> </div>
 										<p style="margin-bottom: 30px; display: inline-block"> I then created an assumptions map to unravel the various assumptions I had regarding the features that piqued the interest of Gen Z users, their pain points, and the alignment of these features with The Washington Post's mission and vision. This exercise allowed me to critically analyze and examine these assumptions, setting the stage for informed decision-making and ensuring alignment with the goals of the organization. </p>
 									</div>
 
@@ -324,7 +324,7 @@
 											<!-- START SECTION: SITE MAP PARAGRAPH -->
 											<div class="col-lg-12">
 												<h3>CREATING PERSONAS</h3>
-												<div style=" border: 1.5px solid #346BF3; width: 5%; margin-bottom: 4%; margin-top: 4%; " ></div>
+												<div style=" border: 1.5px solid #C5170C; width: 5%; margin-bottom: 4%; margin-top: 4%; " ></div>
 											</div>
 											<!-- END OF SITE MAP PARAGRAPH-->
 										</div>
@@ -348,7 +348,7 @@
 											<!-- START SECTION: SITE MAP PARAGRAPH -->
 											<div class="col-lg-12">
 												<h3>COMPETITIVE ANALYSIS</h3>
-												<div style=" border: 1.5px solid #346BF3; width: 5%; margin-bottom: 4%; margin-top: 4%; " ></div>
+												<div style=" border: 1.5px solid #C5170C; width: 5%; margin-bottom: 4%; margin-top: 4%; " ></div>
 											</div>
 											<!-- END OF ... -->
 										</div>
@@ -369,24 +369,24 @@
 									<!-- START: CHALLENGES -->
 									<div class="col-lg-11" style="margin-bottom: 0%">
 										<h3 style="margin-bottom: 30px">KEY OBJECTIVES</h3>
-										<div style=" border: 1.5px solid #346BF3; width: 5%; margin-bottom: 4%; margin-top: 4%; " ></div>
+										<div style=" border: 1.5px solid #C5170C; width: 5%; margin-bottom: 4%; margin-top: 4%; " ></div>
 										<ol style=" margin-bottom: 30px; border: white 1px solid; display: inline-block; " >
 											<li style=" margin-left: 15px; font-weight: 350; margin-bottom: 10px; margin-top: 10px; " >
-												<p style=" color: #346BF3; font-weight: 500; font-size: 18px; " > Restructure the Top-Level Navigation Hierarchy </p>
+												<p style=" color: #C5170C; font-weight: 500; font-size: 18px; " > Restructure the Top-Level Navigation Hierarchy </p>
 												<p> Simplify the top-level hierarchy by removing any unnecessary or redundant categories and prioritize the most important and frequently accessed sections. Establish a clear taxonomy to create a consistent framework as well as improve findability, navigation, and content discovery. </p>
 											</li>
 											<li style=" margin-left: 15px; font-weight: 350; margin-bottom: 10px; margin-top: 10px; " >
-												<p style=" color: #346BF3; font-weight: 500; font-size: 18px; " > Enhance Richness of Content </p>
+												<p style=" color: #C5170C; font-weight: 500; font-size: 18px; " > Enhance Richness of Content </p>
 												<p> Incorporant additional visual aids to enhance the visual appeal and engagement of content. Break down information into consumable chunks and incorporate multimedia elements such as videos or interactive features to provide an immersive and interactive experience. </p>
 											</li>
 
 											<li style=" margin-left: 15px; font-weight: 350; margin-bottom: 10px; " >
-												<p style=" color: #346BF3; font-weight: 500; font-size: 18px; " > Provide Bite-Sized News </p>
+												<p style=" color: #C5170C; font-weight: 500; font-size: 18px; " > Provide Bite-Sized News </p>
 												<p> Deliver concise news updates presented in bite-sized, easily digestible formats to cater to busy users with limited time for lengthy articles.</p> 
 											</li>
 
 											<li style=" margin-left: 15px; font-weight: 350; margin-bottom: 0px; " >
-												<p style=" color: #346BF3; font-weight: 500; font-size: 18px; " > Personalize Feeds </p>
+												<p style=" color: #C5170C; font-weight: 500; font-size: 18px; " > Personalize Feeds </p>
 												<p> Improve the current layout of the For You page by tailoring to the interests and preferences of individual users to increase user engagement and satisfaction. </p>
 											</li>
 										</ol>
@@ -401,7 +401,7 @@
 											<!-- START SECTION: SITE MAP PARAGRAPH -->
 											<div class="col-lg-12">
 												<h3> IDEATION </h3>
-												<div style=" border: 1.5px solid #346BF3; width: 5%; margin-bottom: 4%; margin-top: 4%; " ></div>
+												<div style=" border: 1.5px solid #C5170C; width: 5%; margin-bottom: 4%; margin-top: 4%; " ></div>
 												<p> Generated multiple layout styles for the Home and "For You" pages using the Crazy 8's method and iteratively refined the designs. </p>
 											</div>
 										</div>
@@ -474,7 +474,7 @@
 											<!-- START SECTION: SITE MAP PARAGRAPH -->
 											<div class="col-lg-12">
 												<h3> MID-FIDELITY PROTOTYPING </h3>
-												<div style=" border: 1.5px solid #346BF3; width: 5%; margin-bottom: 4%; margin-top: 4%; " ></div> 
+												<div style=" border: 1.5px solid #C5170C; width: 5%; margin-bottom: 4%; margin-top: 4%; " ></div> 
 												<p style="margin-bottom:4%;"> Ideated multiple home and for you page styles with the intention of introducing more multimedia elements and breaking down articles into digestible pieces. </p>
 											</div>
 										</div>
@@ -561,7 +561,7 @@
 											<div class="col-lg-12">
 												<!-- START: PRODUCT PAGE STRATEGY -->
 												<h3> HOME PAGE STRATEGY </h3>
-												<div style=" border: 1.5px solid #346BF3; width: 5%; margin-bottom: 0%; margin-top: 4%; " ></div>
+												<div style=" border: 1.5px solid #C5170C; width: 5%; margin-bottom: 0%; margin-top: 4%; " ></div>
 											</div>
 										</div>
 									</div>
@@ -624,7 +624,7 @@
 											<div class="col-lg-12">
 												<!-- START: BALACIZE PAGE STRATEGY -->
 												<h3>FOR YOU PAGE STRATEGY</h3>
-												<div style=" border: 1.5px solid #346BF3; width: 5%; margin-bottom: 0%; margin-top: 4%; " ></div>
+												<div style=" border: 1.5px solid #C5170C; width: 5%; margin-bottom: 0%; margin-top: 4%; " ></div>
 											</div>
 										</div>
 									</div>
@@ -713,7 +713,7 @@
 											<!-- START SECTION: SITE MAP PARAGRAPH -->
 											<div class="col-lg-12">
 												<h3> CONCLUSION </h3>
-												<div style=" border: 1.5px solid #346BF3; width: 5%; margin-bottom: 4%; margin-top: 4%; " ></div> 
+												<div style=" border: 1.5px solid #C5170C; width: 5%; margin-bottom: 4%; margin-top: 4%; " ></div> 
 												<p style="margin-bottom:4%;"> For this project, my primary objective was to prioritize the needs and pain points of Gen Z and younger millennial users, aiming to enhance user engagement with The Washington Post. In parallel, I focused on improving the site's information architecture and content taxonomy to ensure a seamless and intuitive user experience. </p>
 											</div>
 										</div>
@@ -730,9 +730,9 @@
 										<!-- top / bottom style -->
 										<!-- <div class="container" style="margin:10px; border: white 1px solid;"></div> -->
 
-										<a class="entry-buttons3" href="https://www.figma.com/file/ACZ0s3scQi8bZ1QPJ2NfIR/Portfolio---The-Washington-Post?type=design&node-id=4-6" target="_blank" >FIGMA WORK</a >
+										<a class="entry-buttons4" href="https://www.figma.com/file/ACZ0s3scQi8bZ1QPJ2NfIR/Portfolio---The-Washington-Post?type=design&node-id=4-6" target="_blank" >FIGMA WORK</a >
 
-										<a class="entry-buttons3" href="https://drive.google.com/file/d/12VJiyfaPLubxKGMzJOmmDMFZNw6WzGw1/view?usp=share_link" target="_blank" > PROCESS DECK </a>
+										<a class="entry-buttons4" href="https://drive.google.com/file/d/12VJiyfaPLubxKGMzJOmmDMFZNw6WzGw1/view?usp=share_link" target="_blank" > PROCESS DECK </a>
 									</div>
 								</div>
 							</article>
