--- a/proj_pomolo.html
+++ b/proj_pomolo.html
@@ -111,7 +111,7 @@
               </h2>
 
               <h2 class="subtitle1">
-                CONCEPT DEVELOPMENT & MOBILE APP DESIGN 
+                MOBILE APP & CONCEPT DEVELOPMENT
               </h2>
 
               <h2 class="subtitle2">
