--- a/proj_thewashingtonpost.html
+++ b/proj_thewashingtonpost.html
@@ -143,7 +143,7 @@
 							<article class="entry entry-single">
 								<h2 class="title1" style="color: #346BF3">The Washington Post</h2>
 
-								<h2 class="subtitle1"> CONTENT STRATEGY </h2>
+								<h2 class="subtitle1"> CONTENT STRATEGY & INFORMATION ARCHITECTURE </h2>
 
 								<h2 class="subtitle2">
 									As the media landscape continues to evolve, it's critical for traditional news organizations like The Washington Post to stay relevant with younger audiences. This content strategy project aims to address this challenge by rethinking how the Post creates and delivers content to Gen Z and young millennials.
