--- a/aboutme.html
+++ b/aboutme.html
@@ -219,6 +219,7 @@
                         Java <br>
                         C / C++ <br>
                         Haskell <br> 
+                        ARM Assembly Language <br>
                         Unix / Linux <br>
                         CSS & HTML <br>
                         Javascript <br>
