--- a/proj_chipotle.html
+++ b/proj_chipotle.html
@@ -146,7 +146,7 @@
 								<h2 class="subtitle1"> MOBILE APP & E-COMMERCE DESIGN </h2>
 
 								<h2 class="subtitle2">
-									As the media landscape continues to evolve, it's critical for traditional news organizations like The Washington Post to stay relevant with younger audiences. This content strategy project aims to address this challenge by rethinking how the Post creates and delivers content to Gen Z and young millennials.
+									Immerse yourself in our redesigned Chipotle mobile app that combines convenience, personalization, and fun. Bringing you a seamless experience for hassle-free group orders and payments, exclusive loyalty rewards for frequent Chipotle visitors, and interactive challenges or games that keep you engaged and excited about your next burrito bowl.
 								</h2>
 
 								<!-- <div
@@ -164,46 +164,46 @@
 
 								<hr class="solid" style="margin-top: 9%; margin-bottom: 9%" />
 
-								<div class="row" style="width: 100%; margin: 0px 0px 0px 0vw">
-									<!-- duration -->
-									<div class="case-details" style="width: 25%">
-										<h2>DURATION</h2>
-										<div style="border: 1.5px solid #C5170C; width: 10%; margin-bottom: 4%; margin-top: 4%;" ></div>
-										<p> 3 weeks </p>
-									</div>
+					
 
-									<!-- role -->
+								<div class="row" style="width: 100%; margin: 0px 0px 0px 0vw">
+									<!-- setting -->
 									<div class="case-details" style="width: 25%">
-										<h2>ROLE</h2>
+										<h2>SETTING</h2>
 										<div style=" border: 1.5px solid #C5170C; width: 10%; margin-bottom: 4%; margin-top: 4%; " ></div>
-										<p>
-											Research <br />
-											Content Strategy <br />
-											Information Architecture <br />
-											Prototyping
+										<p style="text-align: left;">
+											Group project with Nick Allen, Alex Arballo, Caitlin O'Toole, & Sarina Sakiree
 										</p>
 									</div>
+									
+									<!-- duration -->
+									<div class="case-details" style="width: 20%">
+										<h2>DURATION</h2>
+										<div style="border: 1.5px solid #C5170C; width: 10%; margin-bottom: 4%; margin-top: 4%;" ></div>
+										<p> 10 weeks </p>
+									</div>
+
 
 									<!-- type -->
-									<div class="case-details" style="width: 25%">
+									<div class="case-details" style="width: 20%">
 										<h2>DELIVERABLE</h2>
 										<div style=" border: 1.5px solid #C5170C; width: 10%; margin-bottom: 4%; margin-top: 4%; " ></div>
-										<p>Web Content Redesign</p>
+										<p> Mobile App Redesign</p>
 									</div>
 
 									<!-- deck -->
-									<div class="case-details" style="width: 25%">
+									<div class="case-details" style="width: 20%">
 										<h2>LINKS</h2>
 										<div style=" border: 1.5px solid #C5170C; width: 10%; margin-bottom: 4%; margin-top: 4%; " ></div>
 										<p>
-											<a class="about-link2" href="https://www.figma.com/file/ACZ0s3scQi8bZ1QPJ2NfIR/Portfolio---The-Washington-Post?node-id=4%3A6&t=WlnMnhdbNBVclya8-1" target="_blank" > Figma Work </a>
+											<a class="about-link2" href="https://www.figma.com/file/5eBy6eTb2NaL83uibPpy0i/Projects---UX-III-(Spinner)?type=design&node-id=302%3A2&t=qYM3lOf3roe00INw-1" target="_blank" > Figma Work </a>
 											<br />
 
 											<a class="about-link2" href="https://drive.google.com/file/d/12VJiyfaPLubxKGMzJOmmDMFZNw6WzGw1/view" target="_blank" > Process Deck </a>
 											<br />
 
 
-											<a class="about-link2" href="https://docs.google.com/document/d/1-oHYqUmShPZ-BMV2F6brveuWoClSS0P6loL4vbhPpiw/edit?usp=sharing" target="_blank" > Process Book </a>
+											<a class="about-link2" href="https://drive.google.com/drive/folders/1ZDj8DFrfHF6h9vzLYgduTfTo6yWVMrHe?usp=sharing" target="_blank" > Process Book </a>
 										</p>
 									</div>
 								</div>
