--- a/proj_chipotle.html
+++ b/proj_chipotle.html
@@ -146,7 +146,7 @@
 								<h2 class="subtitle1"> MOBILE APP & E-COMMERCE DESIGN </h2>
 
 								<h2 class="subtitle2">
-									Immerse yourself in our redesigned Chipotle mobile app that combines convenience, personalization, and fun. Bringing you a seamless experience for hassle-free group orders and payments, exclusive loyalty rewards for frequent Chipotle visitors, and interactive challenges or games that keep you engaged and excited about your next burrito bowl.
+									Immerse yourself in our redesigned Chipotle mobile app that combines convenience, personalization, and fun. Bringing you a seamless experience for hassle-free group orders and payments, exclusive loyalty rewards for frequent customers, and interactive games that keep you engaged and excited about your next burrito bowl.
 								</h2>
 
 								<!-- <div
