--- a/proj_chipotle.html
+++ b/proj_chipotle.html
@@ -226,7 +226,7 @@
 											<div class="col-lg-12">
 												<div class="portfolio-details-slider" style="border: white 1px solid" >
 													<div class="swiper-slide">
-														<img src="assets/img/proj_post/timeline.png" alt="" />
+														<img src="assets/img/proj_chipotle/0_timeline.png" alt="" />
 													</div>
 												</div>
 											</div>
@@ -297,21 +297,21 @@
 									</div>
 
 									<!-- assumptions 1 IMG -->
-									<div class="col-lg-6" style="border: 1px solid white" >
+									<div class="col-lg-8" style="border: 1px solid white; justify-content: center;" >
 										<p> Phase 1: Brainstorming </p>
 											<section id="portfolio-details" class="portfolio-details">
 												<div class="portfolio-details-slider">
-													<img style="border-radius: 0%; padding-top:50px;" src="assets/img/proj_post/assumptions1.png" alt="" /> 
+													<img style="border-radius: 0%; padding-top:50px;" src="assets/img/proj_chipotle/1_assumptions1.png" alt="" /> 
 												</div>
 											</section>
 									</div>
 									<!-- END: assumptions 1 IMG -->
 
 									<!-- assumptions 2 IMG -->
-									<div class="col-lg-6" style="border: 1px solid white" >
+									<div class="col-lg-8" style="border: 1px solid white" >
 										<p> Phase 2: Mapping </p>
 											<section id="portfolio-details" class="portfolio-details">
-												<div class="portfolio-details-slider"> <img style="border-radius: 0%" src="assets/img/proj_post/assumptions2.png" alt="" /> </div>
+												<div class="portfolio-details-slider"> <img style="border-radius: 0%" src="assets/img/proj_chipotle/1_assumptions2.png" alt="" /> </div>
 											</section>
 									</div>
 									<!-- END: assumptions 2 IMG -->
