--- a/proj_balabangles.html
+++ b/proj_balabangles.html
@@ -165,6 +165,7 @@
 								>
 									<img
 										src="assets/img/proj_bala/cover4.png"
+										style="width: 100%"
 										alt=""
 										class="img-fluid"
 									/>
