--- a/proj_chipotle.html
+++ b/proj_chipotle.html
@@ -360,7 +360,7 @@
 
 												<h3>VALUE PROPOSITION CANVAS</h3>
 												<div style=" border: 1.5px solid #C81E10; width: 5%; margin-bottom: 4%; margin-top: 4%; " ></div>
-												<p style="margin-bottom: 30px; display: inline-block"> During the design process, I adopted a goal-oriented approach by breaking down my tasks into a 3-week timeline, allowing me to establish important milestones and tasks at the end of each week. To gain insights into users' motivations, experiences, and pain points, I employed qualitative research methods such as user interviews and usability testing sessions. These methods proved highly effective. Additionally, I utilized quantitative research methods through user surveying to identify overarching trends, patterns, and potential areas for enhancement. </p>
+												<p style="margin-bottom: 30px; display: inline-block;"> We then utilized a value proposition canvas to align our product and feature development with the customer's values and needs, ensuring a strong market fit. </p>
 
 												<!-- timeline IMG -->
 												<section id="portfolio-details" class="portfolio-details" style=" border: white 1px solid; margin-top: 20px; margin-bottom: -50px; margin-right: auto; margin-left: auto; width: 100%; " >
